Add support for `direnv`.

--- a/.envrc
+++ b/.envrc
@@ -18,6 +18,13 @@
 #
 # SPDX-License-Identifier: Apache-2.0
 
-/.env.d
-/.zed
-/public
+ENV_DIR=".env.d"
+REACHARD_ENV=${REACHARD_ENV:-dev}
+
+if [[ ! -d "${ENV_DIR}" ]]; then
+    return
+fi
+
+if [[ -n "${REACHARD_ENV}" && -f "${ENV_DIR}/${REACHARD_ENV}.env" ]]; then
+    source "${ENV_DIR}/${REACHARD_ENV}.env"
+fi
