--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -16,8 +16,14 @@ server {
     gzip_static on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
+    error_page 404 = @error;
+    location @error {
+        return 301 /;
+    }
+
     location / {
         root /usr/share/nginx/html;
         index index.html;
+        try_files $uri $uri/ =404;
     }
 }
