Nginx: internally redirect supported views with the code 200.

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -21,6 +21,10 @@ server {
         return 301 /;
     }
 
+    location ~ ^/(targets|profile)/?$ {
+        rewrite ^.*$ / last;
+    }
+
     location / {
         root /usr/share/nginx/html;
         index index.html;
