Add the `/targets/add` view.

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -21,7 +21,7 @@ server {
         return 301 /;
     }
 
-    location ~ ^/(targets|profile)/?$ {
+    location ~ ^/(targets(/add)?|profile)/?$ {
         rewrite ^.*$ / last;
     }
 
