--- a/nginx/default.dev.conf
+++ b/nginx/default.dev.conf
@@ -21,12 +21,12 @@ server {
         return 301 /;
     }
 
-    location ~ ^/(targets|profile)/?$ {
+    location ~ ^/(targets(/add)?|profile)/?$ {
         rewrite ^.*$ / last;
     }
 
     location / {
         proxy_intercept_errors on;
-        proxy_pass       http://0.0.0.0:443;
+        proxy_pass http://0.0.0.0:443;
     }
 }
