Add the `/target/[0-9]+` view.

--- a/nginx/default.dev.conf
+++ b/nginx/default.dev.conf
@@ -21,7 +21,7 @@ server {
         return 301 /;
     }
 
-    location ~ ^/(targets(/add)?|profile)/?$ {
+    location ~ ^/(target/[0-9]+|targets(/add)?|profile)/?$ {
         rewrite ^.*$ / last;
     }
 
