--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -11,5 +11,5 @@ ENV BASE_URL="${BASE_URL}"
 
 EXPOSE 1024
 
-COPY nginx/default.dev.conf /etc/nginx/conf.d/default.conf
-COPY nginx/entrypoint.dev.sh /docker-entrypoint.d/99-custom.sh
+COPY docker/nginx.dev.conf /etc/nginx/conf.d/default.conf
+COPY docker/entrypoint.dev.sh /docker-entrypoint.d/99-custom.sh
